# SimpleJsonParser

./: CMakeLists.txt  README.md  document.hpp
include/: document.hpp  error.hpp  mappedfile.hpp  parser.hpp  parser_impl.hpp  sample.json
test/: CMakeLists.txt
test/unittests/: test_value.cpp
